--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "next": "14.1.4",
     "react": "^18",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18",
     "zustand": "^4.5.2"
   },
