--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
@@ -15,6 +16,7 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "next": "14.1.4",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
