--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
+    "react-swipeable": "^7.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
