♻️ refac: DetailInfo, ContentInfo Component css modify.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,11 @@
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", ".next", ".storybook", "storybook-static"]
+  "exclude": [
+    "node_modules",
+    ".next",
+    ".storybook",
+    "coverage",
+    "storybook-static"
+  ]
 }
